syntax = "proto3";

package com.kingpaging.qwelcome.data;

option java_package = "com.kingpaging.qwelcome.data";
option java_multiple_files = true;

message UserPreferences {
  string active_template_id = 1;
  TechProfileProto tech_profile = 2;
  repeated TemplateProto templates = 3;
}

message TechProfileProto {
  string name = 1;
  string title = 2;
  string dept = 3;
}

message TemplateProto {
  string id = 1;
  string name = 2;
  string content = 3;
}
